| Summary: | ASTERISK-29175: res_pjsip_stir_shaken: Fix module description | ||
| Reporter: | Stanislav Abramenkov (silentindark) | Labels: | patch |
| Date Opened: | 2020-11-23 08:35:06.000-0600 | Date Closed: | 2020-12-01 11:26:24.000-0600 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_stir_shaken |
| Versions: | 16.15.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) res_pjsip_stir_shaken_desc_fix.patch | |
| Description: | Hello,
Current description is "PSIP STIR/SHAKEN Module for Asterisk" module show like res_pjsip_stir_shaken.so Module Description Use Count Status Support Level res_pjsip_stir_shaken.so PSIP STIR/SHAKEN Module for Asterisk 0 Running core I think that correct is "PJSIP STIR/SHAKEN Module for Asterisk" | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-11-23 08:35:07.001-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Stanislav Abramenkov (silentindark) 2020-11-23 08:36:14.379-0600 possible fix By: Kevin Harwell (kharwell) 2020-11-23 11:21:31.408-0600 Ah yes the 'J' is missing. Would you like to push ^1^ this patch to gerrit ^2^? ^1^ https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process ^2^ https://wiki.asterisk.org/wiki/display/AST/Gerrit+Usage By: Friendly Automation (friendly-automation) 2020-12-01 11:26:25.151-0600 Change 15204 merged by George Joseph: res_pjsip_stir_shaken: Fix module description [https://gerrit.asterisk.org/c/asterisk/+/15204|https://gerrit.asterisk.org/c/asterisk/+/15204] By: Friendly Automation (friendly-automation) 2020-12-01 11:26:50.189-0600 Change 15191 merged by George Joseph: res_pjsip_stir_shaken: Fix module description [https://gerrit.asterisk.org/c/asterisk/+/15191|https://gerrit.asterisk.org/c/asterisk/+/15191] By: Friendly Automation (friendly-automation) 2020-12-01 11:27:08.917-0600 Change 15192 merged by George Joseph: res_pjsip_stir_shaken: Fix module description [https://gerrit.asterisk.org/c/asterisk/+/15192|https://gerrit.asterisk.org/c/asterisk/+/15192] | ||