res/res_pjsip_stir_shaken.c
@@ -320,7 +320,7 @@ static int load_module(void)
 #define AST_BUILDOPT_SUM ""
 
 AST_MODULE_INFO(ASTERISK_GPL_KEY, AST_MODFLAG_GLOBAL_SYMBOLS | AST_MODFLAG_LOAD_ORDER,
-				"PSIP STIR/SHAKEN Module for Asterisk",
+				"PJSIP STIR/SHAKEN Module for Asterisk",
 	.support_level = AST_MODULE_SUPPORT_CORE,
 	.load = load_module,
 	.unload = unload_module,
